kub tut/6/busybox-ns.yaml
apiVersion: v1
kind: Pod
metadata:
  name: verybusy
spec:
  containers:
  - image: busybox
    name: busy
    command: 
      - sleep
      - "3600"
  - image: busybox
    name: box
    command: 
      - sleep
      - "3600"
